install-nacos/ingress-nacos.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-http
  namespace: nacos
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: my.nacos.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nacos-svc
            port: 
              number: 8848
